results/classifier/118/all/1914870
register: 0.963
virtual: 0.958
debug: 0.944
semantic: 0.944
arm: 0.943
graphic: 0.938
peripherals: 0.935
hypervisor: 0.929
permissions: 0.929
architecture: 0.919
performance: 0.914
assembly: 0.914
device: 0.913
boot: 0.909
mistranslation: 0.907
PID: 0.904
socket: 0.898
TCG: 0.891
user-level: 0.882
risc-v: 0.879
network: 0.877
kernel: 0.873
vnc: 0.867
VMM: 0.856
ppc: 0.846
files: 0.801
KVM: 0.787
i386: 0.760
x86: 0.744

libvixl compilation failure on Debian unstable

As of commit 0e324626306:

$ lsb_release -d
Description:    Debian GNU/Linux bullseye/sid

Project version: 5.2.50
C compiler for the host machine: cc (gcc 10.2.1 "cc (Debian 10.2.1-6) 10.2.1 20210110")
C linker for the host machine: cc ld.bfd 2.35.1
C++ compiler for the host machine: c++ (gcc 10.2.1 "c++ (Debian 10.2.1-6) 10.2.1 20210110")
C++ linker for the host machine: c++ ld.bfd 2.35.1

[6/79] Compiling C++ object libcommon.fa.p/disas_libvixl_vixl_utils.cc.o
FAILED: libcommon.fa.p/disas_libvixl_vixl_utils.cc.o 
c++ -Ilibcommon.fa.p -I. -I.. -Iqapi -Itrace -Iui/shader -I/usr/include/capstone -I/usr/include/glib-2.0 -I/usr/lib/hppa-linux-gnu/glib-2.0/include -fdiagnostics-color=auto -pipe -Wall -Winvalid-pch -Wnon-virtual-dtor -Werror -std=gnu++11 -O2 -g -isystem /home/philmd/qemu/linux-headers -isystem linux-headers -iquote . -iquote /home/philmd/qemu -iquote /home/philmd/qemu/include -iquote /home/philmd/qemu/disas/libvixl -iquote /home/philmd/qemu/tcg/hppa -iquote /home/philmd/qemu/accel/tcg -pthread -D__STDC_LIMIT_MACROS -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -Wundef -Wwrite-strings -fno-strict-aliasing -fno-common -fwrapv -Wtype-limits -Wformat-security -Wformat-y2k -Winit-self -Wignored-qualifiers -Wempty-body -Wendif-labels -Wexpansion-to-defined -Wimplicit-fallthrough=2 -Wno-missing-include-dirs -Wno-shift-negative-value -Wno-psabi -fPIE -MD -MQ libcommon.fa.p/disas_libvixl_vixl_utils.cc.o -MF libcommon.fa.p/disas_libvixl_vixl_utils.cc.o.d -o libcommon.fa.p/disas_libvixl_vixl_utils.cc.o -c ../disas/libvixl/vixl/utils.cc
In file included from /home/philmd/qemu/disas/libvixl/vixl/utils.h:30,
                 from ../disas/libvixl/vixl/utils.cc:27:
/usr/include/string.h:36:43: error: missing binary operator before token "("
   36 | #if defined __cplusplus && (__GNUC_PREREQ (4, 4) \
      |                                           ^
/usr/include/string.h:53:62: error: missing binary operator before token "("
   53 | #if defined __USE_MISC || defined __USE_XOPEN || __GLIBC_USE (ISOC2X)
      |                                                              ^
/usr/include/string.h:165:21: error: missing binary operator before token "("
  165 |      || __GLIBC_USE (LIB_EXT2) || __GLIBC_USE (ISOC2X))
      |                     ^
/usr/include/string.h:174:43: error: missing binary operator before token "("
  174 | #if defined __USE_XOPEN2K8 || __GLIBC_USE (LIB_EXT2) || __GLIBC_USE (ISOC2X)
      |                                           ^
/usr/include/string.h:492:19: error: missing binary operator before token "("
  492 | #if __GNUC_PREREQ (3,4)
      |                   ^
In file included from /home/philmd/qemu/disas/libvixl/vixl/utils.h:30,
                 from ../disas/libvixl/vixl/utils.cc:27:
/usr/include/string.h:28:1: error: ‘__BEGIN_DECLS’ does not name a type
   28 | __BEGIN_DECLS
      | ^~~~~~~~~~~~~
In file included from /home/philmd/qemu/disas/libvixl/vixl/utils.h:30,
                 from ../disas/libvixl/vixl/utils.cc:27:
/usr/include/string.h:44:8: error: ‘size_t’ has not been declared
   44 |        size_t __n) __THROW __nonnull ((1, 2));
      |        ^~~~~~
/usr/include/string.h:44:20: error: expected initializer before ‘__THROW’
   44 |        size_t __n) __THROW __nonnull ((1, 2));
      |                    ^~~~~~~
/usr/include/string.h:47:56: error: ‘size_t’ has not been declared
   47 | extern void *memmove (void *__dest, const void *__src, size_t __n)
      |                                                        ^~~~~~
/usr/include/string.h:48:6: error: expected initializer before ‘__THROW’
   48 |      __THROW __nonnull ((1, 2));
      |      ^~~~~~~
/usr/include/string.h:61:42: error: ‘size_t’ has not been declared
   61 | extern void *memset (void *__s, int __c, size_t __n) __THROW __nonnull ((1));
      |                                          ^~~~~~

Is there a package dependency missing?

I think we had some c++ related fixes merged in the last weeks ... is this still reproducible with the current 6.0-rc5 version of QEMU?

The QEMU project is currently moving its bug tracking to another system.
For this we need to know which bugs are still valid and which could be
closed already. Thus we are setting the bug state to "Incomplete" now.

If the bug has already been fixed in the latest upstream version of QEMU,
then please close this ticket as "Fix released".

If it is not fixed yet and you think that this bug report here is still
valid, then you have two options:

1) If you already have an account on gitlab.com, please open a new ticket
for this problem in our new tracker here:

    https://gitlab.com/qemu-project/qemu/-/issues

and then close this ticket here on Launchpad (or let it expire auto-
matically after 60 days). Please mention the URL of this bug ticket on
Launchpad in the new ticket on GitLab.

2) If you don't have an account on gitlab.com and don't intend to get
one, but still would like to keep this ticket opened, then please switch
the state back to "New" or "Confirmed" within the next 60 days (other-
wise it will get closed as "Expired"). We will then eventually migrate
the ticket automatically to the new system (but you won't be the reporter
of the bug in the new system and thus you won't get notified on changes
anymore).

Thank you and sorry for the inconvenience.


Still an issue as of commit 6d34aa9969f.

Looking at commit 875df03b221 logic ("osdep: protect qemu/osdep.h with extern "C"")
I tried this:
-- >8 --
diff --git a/disas/libvixl/vixl/utils.h b/disas/libvixl/vixl/utils.h
index 5ab134e240..fc28d7456c 100644
--- a/disas/libvixl/vixl/utils.h
+++ b/disas/libvixl/vixl/utils.h
@@ -27,8 +27,10 @@
 #ifndef VIXL_UTILS_H
 #define VIXL_UTILS_H
 
-#include <string.h>
 #include <cmath>
+extern "C" {
+#include <string.h>
+}
 #include "vixl/globals.h"
 #include "vixl/compiler-intrinsics.h"
---
which fixes the problem...



Suggested patch:
https://lists.gnu.org/archive/html/qemu-devel/2021-05/msg04637.html

Fix has been committed here:
https://git.qemu.org/?p=qemu.git;a=commitdiff;h=2fed21d25b3a9562869

